--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "alirahimi/livewire-persian-datepicker": "^1.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-enso/enums": "^2.6",
         "laravel-enso/select": "*",
